# bachelor

./: .gitignore  COPYING  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  run_despicable.sh  run_indiana.sh  run_stranamore.sh
book/: Makefile.am  Makefile.in  Phd_1.cls  RefsCGC.bib  conclusions.tex  dixon.tex  esercizi  fermat.tex  library.bib  math_prequisites.tex  pollard+1.tex  pollardrho.tex  preface.tex  question_authority.tex  ssl_prequisites.tex  template.tex  template_tesi.tex  thesis.cls  wiener.tex  williams+1.tex
reports/: bibliography.org  report1.org  report2.org  report3.org  report4.org  report5.org  report6.org  report7.org
src/: Makefile.am  Makefile.in  cmdline.c  despicable.c  indiana.c  qa.c  qa_sock.c  stranamore.c
src/apps/: Makefile.am  Makefile.in  gen.c  primes.sh
src/apps/tests/: test_gen_priv.test  test_gen_pub.test
src/include/: config.h.in  qa.h  qa_sock.h
src/include/qa/: qa.h  qa_sock.h  questions
src/questions/: Makefile.am  Makefile.in  allquestions.c  dixon.c  example.c  fermat.c  metadata.c  pollard.c  pollardrho.c  primes.c  qarith.c  qpollard.h  qstrings.c  questions.h  qwiener.h  weiner.c  wiener.c  williams+1.c
src/questions/include/: primes.h  qarith.h  qdixon.h  qstrings.h  questions.h  qwiener.h  qwilliams.h
src/questions/test/: pollard.pem  test_wiener.c
src/questions/tests/: Makefile.am  Makefile.in  esse3.pem  fermat2.pem  test_dixon.c  test_fermat.c  test_fermat.test  test_metadata.test  test_pollard.c  test_pollardrho.c  test_primes.c  test_qarith.c  test_qstrings.c  test_wiener.c  test_williams+1.c  weak_p+1.list  weak_p-1.list  wiener_test.crt
src/tests/: Makefile.am  Makefile.in  cryptowars.test  cryptowars2011_1.pem  cryptowars2011_2.pem  cryptowars2011_3.pem  dummy.crt  test_cmdline.test  test_qa.c  test_qa_sock.c  test_stranamore.test  test_stranamore.txt
