# unittesting my ass
LDADD=../libquestions.a -lssl -lcrypto

TESTS = test_qarith test_qstrings test_wiener test_pollard
check_PROGRAMS = $(TESTS)
# check_LIBRARIES = libquestions.a

test_qstrings_SOURCES = test_qstrings.c
test_qarith_SOURCES = test_qarith.c
test_wiener_SOURCES = test_wiener.c
test_pollard_SOURCES = test_pollard.c
